completed tips aside section and fixed final flex and alignment properties

--- a/styles/fish.css
+++ b/styles/fish.css
@@ -1,5 +1,3 @@
-
-
 .fish {
     display: flex;
     flex-wrap: wrap;
@@ -12,16 +10,16 @@
 .fish__details {
     display: flex;
     flex-direction: column;
-    margin: 20px;
-    flex: 1 0 50px;
+    margin: 10px;
+    flex: 1;
     background-color: #74d4c0;
     border: black 5px double;
 }
 
 .fish__picture {
-    margin: 0 auto;
+    margin: auto;
     max-width: 15rem;
-    height: auto;
+    height: 10rem;
     box-shadow: 10px 5px 10px;   
 }
 
