--- a/styles/main.css
+++ b/styles/main.css
@@ -17,16 +17,14 @@
 
 .underTheBanner__left {
     display: flex;
-    flex-direction: column;
     flex: 4;
+    flex-direction: column;
 }
 
 .underTheBanner__right {
     flex: 1;
+    border: 2px black double;
+    margin: 5px;
+    background-image: url("../images/aquarium.jpg");
 
-}
-
-.nav__footer {
-    background-color: #def4f0;
-    
 }
